--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   introduction_screen: ^2.1.0
   get: ^4.3.8
   dots_indicator: ^2.0.0
+  image_picker: ^0.8.3+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
