--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   introduction_screen: ^2.1.0
+  flutter_screenutil: ^5.0.0+2
   get: ^4.3.8
   dots_indicator: ^2.0.0
   image_picker: ^0.8.3+3
-
+  shared_preferences: ^2.0.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
