--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/login_check/
+    - assets/images/upload_picture/
+    - assets/images/uploaded_picture/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
