--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   get: ^4.3.8
   dots_indicator: ^2.0.0
-  image_picker: ^0.8.3+3
+  image_picker: ^0.8.4
   shared_preferences: ^2.0.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
