--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   get: ^4.3.8
   dots_indicator: ^2.0.0
   image_picker: ^0.8.4
+  image_cropper: ^1.4.1
+  image_crop: ^0.4.0
   shared_preferences: ^2.0.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
