--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   intl: ^0.17.0
   flutter_svg: ^0.22.0
   flutter_rating_bar: ^4.0.0
+  smooth_page_indicator: ^1.0.0+2
+  flutter_vibrate: ^1.3.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
