--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_vibrate: ^1.3.0
   http: ^0.13.4
   dio: ^4.0.1
+  sqflite: ^2.0.0+4
+  path: ^1.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
