--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,10 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   flutter_vibrate: ^1.3.0
   http: ^0.13.4
-  dio: ^4.0.1
   sqflite: ^2.0.0+4
   path: ^1.8.0
   jwt_decode: ^0.3.1
-  menu_button: ^1.4.2+1
+  card_swiper: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
