--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   jwt_decode: ^0.3.1
   card_swiper: ^1.0.4
   cached_network_image: ^3.2.0
+  photo_view: ^0.13.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
