--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   intl: ^0.17.0
   flutter_svg: ^0.22.0
   flutter_rating_bar: ^4.0.0
+  syncfusion_flutter_sliders: ^19.4.50
+  syncfusion_flutter_charts: ^19.4.50
   smooth_page_indicator: ^1.0.0+2
   flutter_vibrate: ^1.3.0
   http: ^0.13.4
