--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
+  flutter_html: ^2.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
