--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+  			<key>NSAllowsArbitraryLoads</key> <true/>
+ 			<key>NSAllowsArbitraryLoadsInWebContent</key> <true/>
+		</dict>
+		<key>io.flutter.embedded_views_preview</key>
+		<string>YES</string>
 		<key>NSCameraUsageDescription</key>
 		<string>Used to demonstrate image picker plugin</string>
+		<key>io.flutter.embedded_views_preview</key>
+		<string>YES</string>
 		<key>NSMicrophoneUsageDescription</key>
 		<string>Used to capture audio for image picker plugin</string>
 		<key>NSPhotoLibraryUsageDescription</key>
@@ -47,6 +56,7 @@
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
-
+		
 	</dict>
+	
 </plist>
