--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
+  flutter_inappwebview: ^5.4.3+7
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,6 +69,7 @@ flutter:
     - assets/images/
     - assets/images/temporary/
     - assets/images/svg/
+    - assets/daum_address.html
 
   #   - images/a_dot_ham.jpeg
 
