--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   card_swiper: ^2.0.3
   cached_network_image: ^3.2.0
   photo_view: ^0.13.0
+  dotted_line: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
