--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.2.0
   photo_view: ^0.13.0
   dotted_line: ^3.1.0
+  dotted_border: ^2.0.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
