--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   photo_view: ^0.13.0
   dotted_line: ^3.1.0
   dotted_border: ^2.0.0+2
+  iamport_flutter: ^0.10.1+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
