--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   dotted_line: ^3.1.0
   dotted_border: ^2.0.0+2
   iamport_flutter: ^0.10.1+4
+  carousel_slider: ^4.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
