--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   flutter_vibrate: ^1.3.0
   http: ^0.13.4
-  sqflite: ^2.0.0+4
+  sqflite: ^2.0.3
   path: ^1.8.0
   jwt_decode: ^0.3.1
   card_swiper: ^2.0.3
